[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leaf-toolkit"
version = "1.0.0"
description = "Leaf Analysis and Evaluation Toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = [
    "LICENSE",
]
authors = [{ name = "Radek Zenkl", email = "radek.zenkl@usys.ethz.ch" }]
maintainers = [
  { name = "Radek Zenkl", email = "radek.zenkl@usys.ethz.ch" },
]

dependencies = [
    "setuptools >=64.0",
    "ultralytics >=8.3.107",
    "opencv-python",
    "scikit-image",
    "torch >=2.0.1",
    "torchvision",
    "torchmetrics",
    "matplotlib",
    "mpldatacursor",
    "mplcursors",
    "protobuf",
    "tqdm",
    "psutil",
    "hydra-core >=1.3.2",
    "omegaconf >=2.3.0",
]



classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
"Homepage" = "https://github.com/RadekZenkl/leaf-toolkit"
"Bug Reports" = "https://github.com/RadekZenkl/leaf-toolkit/issues"
"Source" = "https://github.com/RadekZenkl/leaf-toolkit"
